# ai_swarm

./: .gitignore  CLAUDE.md  PDR_TODOS.MD  PRD.MD  README.md  pyproject.toml  schedule_config.yaml
agents/: audience_compliance_agent.py  base_agent.py  canon_updater_agent.py  claim_extractor_agent.py  contradiction_agent.py  delta_agent.py  entity_resolver_agent.py  ingestor_agent.py  lesson_composer_agent.py  metric_extractor_agent.py  micro_router_agent.py  narration_formatter_agent.py  normalizer_agent.py  plot_architect_agent.py  premise_architect_agent.py  publisher_agent.py  qa_validator_agent.py  question_generator_agent.py  registry.py  scene_writer_agent.py  story_memory_loader_agent.py  synthesizer_agent.py
automation/: automation_cli.py  config.py  config.yaml  hardening.py  logging.py  processor.py  queue.py  result_writer.py  task_schema.py  validator.py  watcher.py
config/: fleet_config.yaml  router_config.yaml
connectors/: file_loader.py  rss_fetch.py  web_fetch.py
core/: adapters.py  budgets.py  command_registry.py  errors.py  fleet.py  gpu_monitor.py  logging.py  notifications.py  orchestrator.py  policies.py  provider_registry.py  routing.py  scheduler.py  state.py  tiered_dispatch.py
data/: dao_characters.py  dao_claims.py  dao_entities.py  dao_episodes.py  dao_metrics.py  dao_routing.py  dao_runs.py  dao_snapshots.py  dao_sources.py  dao_story_worlds.py  dao_telemetry.py  dao_threads.py  db.py  schema.sql
docs/: claude_premium_bridge_pdr.md  claude_premium_bridge_todos.md  graph_architecture.md  persistent_memory_story_system.md  (+5 more)
(+92 files in other folders)
